# spec

./: README.md  ara-json.md  ara.schema.json
api-design/: ABOUT.md  SKILL.md  ara.json
cli/: .gitignore  README.md  pyproject.toml
cli/docs/: ARA-CLI-Documentation.md
cli/src/ara_cli/: __init__.py  main.py
cli/src/ara_cli/commands/: __init__.py  config.py  info.py  init.py  install.py  list_cmd.py  login.py  logout.py  publish.py  search.py  uninstall.py  unpublish.py  update.py  validate.py
cli/src/ara_cli/core/: __init__.py  config_manager.py  installer.py  lockfile_manager.py  packager.py  registry_client.py  resolver.py  security.py  validation.py
cli/src/ara_cli/models/: __init__.py  api_responses.py  config.py  lockfile.py  manifest.py
cli/src/ara_cli/output/: __init__.py  console.py  prompts.py  tables.py
cli/src/ara_cli/utils/: __init__.py  constants.py  errors.py  semver.py
cli/tests/: conftest.py  test_lockfile.py  test_models.py  test_resolver.py  test_security.py  test_semver.py  test_validation.py
cli/tests/test_commands/: test_config.py  test_init.py  test_list.py  test_login_logout.py  test_validate.py
lib/python/src/ara_ref/: models.py
lib/rust/src/: models.rs
