[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ara-cli"
version = "0.1.0"
description = "ARA CLI - Package registry for AI development artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click>=8.0",
    "pydantic[email]>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-cov>=5.0",
]

[project.scripts]
ara = "ara_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ara_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
